# generative-ai

./: .env.example  .gitignore  README.md  batch.py  capture-img.py  cricket-old.py  cricket.py  embeddings.py  expenses-agent.py  expenses.py  fine-tuning-eval.py  fine-tuning.py  fn.py  gen-image.py  image.py  main.py  mcp.py  most-similar.py  movies-agent.py  movies-pc-search.py  movies-pc.py  movies.py  pc-batch.py  pc-search.py  pc.py  pyproject.toml  recap.py  similarity.py  simple-agent.py  source_texts.py  structured-currency.py  structured-event.py  structured-hotel-menu.py  structured-visiting-card.py  structured.py  summary-agent.py  transcription.py  youtube-summary.py
data/: expenses.csv
github/: readme.py
inputs/: animals.txt  currency.txt  embeddings.txt  menu.txt  sample.m4a  source_texts.txt
youtube/: transcript.py
